# pinkie

./: .gitignore  .gitmodules  README.md  a  setup.py
pinkie/: CMakeLists.txt  __init__.py
pinkie/cuda/: CMakeLists.txt
pinkie/cuda/image/: CMakeLists.txt
pinkie/cuda/image/csrc/: CMakeLists.txt  image.cpp  image.h
pinkie/cuda/ops/csrc/: CMakeLists.txt  cast.cu  ops.h
pinkie/doc/: tensor.md
pinkie/image/: CMakeLists.txt
pinkie/image/csrc/: CMakeLists.txt  frame.cpp  frame.h  image.cpp  image.h  pixel_type.cpp  pixel_type.h
pinkie/image/cuda/: CMakeLists.txt  image.cpp  image.h  test_cuda.cpp
pinkie/image/python/: frame.py  image.py  image_itk.py  io.py  pixel_type.py
pinkie/image/pywrappers/: CMakeLists.txt  frame.cpp  frame.h  image.cpp  image.h
pinkie/image/test/: CMakeLists.txt  test_frame.py  test_image.cpp  test_image.py
pinkie/test/: CMakeLists.txt  mat_mul.h  mat_mul_cpu.cpp  mat_mul_cuda.cu  test_cuda.cpp  test_gflags_glog.cpp  test_python_interface.cpp  test_python_interface.cu  test_python_interface.h  test_python_interface.py  test_torch.cpp  test_torch_interface.py  test_torch_library.cpp
pinkie/test/csrc/: CMakeLists.txt  test_python_interface.cpp  test_python_interface.cu  test_python_interface.h
pinkie/test/python/: test_python_interface.py
pinkie/tools/: FindPythonLibs.cmake
pinkie/transform/csrc/: CMakeLists.txt  resample.cpp  resample.h  rotation.cpp  rotation.h
pinkie/transform/python/: test_transform.py  transform.py
pinkie/transform/pywrappers/: CMakeLists.txt  transform.cpp  transform.h
pinkie/transform/test/: test_resample.py  test_rotation.py  test_transform.py
pinkie/utils/csrc/: cuda_header.h  header.h
pinkie/utils/python/: ctypes.py
