file(
  GLOB
  PINKIE_TRANSFORM_SRC
  rotation.h
  rotation.cpp
  resample.h
  resample.cpp
)
source_group(
  pinkie_transform 
  FILES
  ${PINKIE_TRANSFORM_SRC}
)
add_library(
  pinkie_transform
  STATIC
  ${PINKIE_TRANSFORM_SRC}
)
target_link_libraries(
  pinkie_transform
  ${TORCH_LIBRARIES}
  ${EXTRA_LIBS}
  pinkie_image
)
